Fix negotiations docs and behaviour
